Fix footer link styles
The blue was too hard to see.  Used white instead of the red
used in the sections because the red was also hard to see.

--- a/css/main.scss
+++ b/css/main.scss
@@ -231,4 +231,9 @@ a.carousel-control.right:hover {
   color: #fff;
   padding-top: 20px;
   padding-bottom: 20px;
+
+  a {
+    color: #fff;
+    font-weight: bold;
+  }
 }
